@@ -84,6 +84,9 @@ Extension Modules
 Library
 -------
 
+- Issue #2912: platform.uname now tries to determine unknown information even if
+  os.uname exists.
+
 - The rfc822 module has been deprecated for removal in 3.0.
 
 - The mimetools module has been deprecated for removal in 3.0.
